--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-   margin: 0;
+    margin: 0;
     overflow: hidden;
 }
 
@@ -35,14 +35,14 @@ img {
 }
 
 .start-btn {
-    animation: 1s pulse infinite ease-in-out, shake .5s cubic-bezier(.36,.07,.19,.97) 2s;
+    animation: 1s pulse infinite ease-in-out, shake .5s cubic-bezier(.36, .07, .19, .97) 2s;
 }
 
 .try-again {
     opacity: 0;
 
     animation: fadeIn, shake;
-    animation-delay: 3.5s, 4s;
+    animation-delay: 3s, 4s;
     animation-duration: .3s, .7s;
     animation-iteration-count: 1, 3;
     animation-fill-mode: forwards;
@@ -82,17 +82,54 @@ img {
 }
 
 @keyframes shake {
-    0% { transform: translate(0, 0) rotate(0deg); }
-    10% { transform: translate(5px, 5px) rotate(5deg); }
-    20% { transform: translate(0, 0) rotate(0deg); }
-    30% { transform: translate(-5px, 5px) rotate(-5deg); }
-    40% { transform: translate(0, 0) rotate(0deg); }
-    50% { transform: translate(5px, 5px) rotate(5deg); }
-    60% { transform: translate(0, 0) rotate(0deg); }
-    70% { transform: translate(-5px, 5px) rotate(-5deg); }
-    80% { transform: translate(0, 0) rotate(0deg); }
-    90% { transform: translate(5px, 5px) rotate(5deg); }
-    100% { transform: translate(0, 0) rotate(0deg); }
+    0% {
+        transform: translate(0, 0) rotate(0deg);
+    }
+    10% {
+        transform: translate(5px, 5px) rotate(5deg);
+    }
+    20% {
+        transform: translate(0, 0) rotate(0deg);
+    }
+    30% {
+        transform: translate(-5px, 5px) rotate(-5deg);
+    }
+    40% {
+        transform: translate(0, 0) rotate(0deg);
+    }
+    50% {
+        transform: translate(5px, 5px) rotate(5deg);
+    }
+    60% {
+        transform: translate(0, 0) rotate(0deg);
+    }
+    70% {
+        transform: translate(-5px, 5px) rotate(-5deg);
+    }
+    80% {
+        transform: translate(0, 0) rotate(0deg);
+    }
+    90% {
+        transform: translate(5px, 5px) rotate(5deg);
+    }
+    100% {
+        transform: translate(0, 0) rotate(0deg);
+    }
+}
+
+.stamp-fail {
+    opacity: 0;
+    animation: scaleIn .6s 3s both;
+}
+
+@keyframes scaleIn {
+    from {
+        transform: scale(2);
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
 
 .hand {
@@ -100,13 +137,11 @@ img {
 }
 
 .step-1 .hand {
-    /*position: absolute;*/
     left: 25%;
     top: 40%;
-z-index: 5;
+    z-index: 5;
 
     animation: .5s touch 1.5s;
-    /*animation-iteration-count: 2;*/
 }
 
 
@@ -147,12 +182,15 @@ z-index: 5;
 .options-btn:nth-of-type(2) {
     animation-delay: 1s
 }
+
 .options-btn:nth-of-type(3) {
     animation-delay: 1.5s
 }
+
 .options-btn:nth-of-type(4) {
     animation-delay: 2s
 }
+
 .options-btn:nth-of-type(5) {
     animation-delay: 2.5s
 }
@@ -167,11 +205,10 @@ z-index: 5;
 }
 
 
-
 @keyframes show {
     0% {
-    top: 40%;
-}
+        top: 40%;
+    }
     25% {
         top: -30%;
     }
@@ -196,7 +233,6 @@ z-index: 5;
     opacity: 0;
 
     pointer-events: none;
-
 }
 
 .emoji-wrap.run-animation {
@@ -219,4 +255,17 @@ z-index: 5;
         bottom: 200%;
     }
 
+}
+
+.error-msg {
+    font-family: sans-serif;
+    font-size: 3rem;
+    color: red;
+    font-weight: bold;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    margin: 0;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 100;
 }
